# wastebin

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.arm  LICENSE  README.md  deny.toml  flake.nix
.github/workflows/: docker-publish.yml  release.yml  rust.yml  theme-showcase.yml
assets/: LinkHighlight.sublime-syntax  README.md
crates/wastebin_core/: Cargo.toml  build.rs
crates/wastebin_core/src/: adjectives.txt  crypto.rs  db.rs  determiners.txt  env.rs  expiration.rs  id.rs  lib.rs  nouns.txt  verbs.txt
crates/wastebin_core/src/migrations/: 0002-add-created-column.sql  0004-add-compressed-column.sql
crates/wastebin_ctl/: Cargo.toml
crates/wastebin_ctl/src/: main.rs
crates/wastebin_highlight/: Cargo.toml
crates/wastebin_highlight/src/: highlight.rs  lib.rs  theme.rs
crates/wastebin_server/: Cargo.toml
crates/wastebin_server/src/: assets.rs  cache.rs  env.rs  errors.rs  expiration.rs  highlight.rs  i18n.rs  main.rs  page.rs  style.css  test_helpers.rs
crates/wastebin_server/src/handlers/: download.rs  extract.rs  mod.rs  raw.rs  robots.rs  theme.rs
crates/wastebin_server/src/handlers/delete/: api.rs  form.rs  mod.rs
crates/wastebin_server/src/handlers/html/: burn.rs  index.rs  mod.rs  paste.rs  qr.rs  rendered.rs
crates/wastebin_server/src/handlers/insert/: api.rs  form.rs  mod.rs
crates/wastebin_server/src/javascript/: base.js  burn.js  index.js  password-toggle.js  paste.js
crates/wastebin_server/src/migrations/: 0006-add-nonce-column.sql
crates/wastebin_server/src/themes/: ayu-dark.tmTheme
crates/wastebin_server/templates/: base.html  burn-confirmation.html  burn.html  encrypted.html  error.html  formatted.html  index.html  paste.html  qr.html  rendered.html
crates/wastebin_theme_showcase/: Cargo.toml
crates/wastebin_theme_showcase/src/: main.rs
crates/wastebin_theme_showcase/templates/: page.html
src/: assets.rs  cache.rs  crypto.rs  db.rs  env.rs  errors.rs  handler.rs  highlight.rs  id.rs  main.rs  page.rs  pages.rs  rest.rs  srv.rs  style.css  test_helpers.rs  web.rs
src/handlers/: delete.rs  download.rs  extract.rs  insert.rs  mod.rs  raw.rs  robots.rs  theme.rs
src/handlers/delete/: api.rs  form.rs  mod.rs
src/handlers/html/: burn.rs  index.rs  mod.rs  paste.rs  qr.rs
src/handlers/insert/: api.rs  form.rs
src/javascript/: base.js  index.js  paste.js
src/migrations/: 0001-down-initial.sql  0001-up-initial.sql  0002-down-add-created-column.sql  0003-drop-created-add-uid-column.sql  0005-drop-text-column.sql  0007-add-title-column.sql
src/routes/: assets.rs  form.rs  json.rs  mod.rs  paste.rs
src/themes/: ayu-dark.tmTheme  ayu-light.tmTheme  style.css
templates/: base.html  burn.html  encrypted.html  error.html  formatted.html  index.html  paste.html  qr.html  style.css
