[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
enum_glob_use = "deny"
if_not_else = "deny"
items_after_statements = "deny"
mut_mut = "deny"
panic = "deny"
pedantic = "deny"
print_stdout = "deny"
similar_names = "deny"
unicode_not_nfc = "deny"
unwrap_used = "deny"
used_underscore_binding = "deny"

[profile.release]
strip = "debuginfo"
lto = "fat"
