[package]
name = "wastebin_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = ["std"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
cgisf_lib = "0.2.1"
chacha20poly1305 = "0.10.1"
kanal = "0.1.1"
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = { version = "1", default-features = false }
rust-argon2 = "2.0.0"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt-multi-thread"] }
tracing = { workspace = true }
zstd = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "rt-multi-thread",
    "macros",
    "time",
] }

[lints]
workspace = true
