[package]
name = "wastebin-ctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
tabled = "0.19.0"
tokio.workspace = true
wastebin_core = { path = "../wastebin_core" }

[lints]
workspace = true
