[package]
name = "wastebin-ctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
clap_complete = { version = "4.5.50", optional = true }
tabled = "0.20.0"
tokio = { workspace = true, features = ["macros", "sync"] }
wastebin_core = { path = "../wastebin_core" }

[lints]
workspace = true

[features]
default = ["completion"]
completion = ["dep:clap_complete"]
