[package]
name = "wastebin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
askama = { version = "0.12", default-features = false }
askama_web = { version = "0.12.0-pre.0", features = ["axum-0.7"] }
axum = { version = "0.7", features = ["json", "query"] }
axum-extra = { version = "0.9", features = ["cookie-signed", "typed-header"] }
bytes = "1"
cached = { version = "0.55.0", default-features = false }
hex = "0.4"
hostname = "0.4.0"
http = "1.1.0"
mime = "0.3"
qrcodegen = "1"
sha2 = "0.10"
serde = { workspace = true }
syntect = { version = "5", default-features = false, features = ["html", "plist-load", "regex-fancy"] }
thiserror = { workspace = true }
time = { version = "0.3", features = ["macros", "serde"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["compression-full", "limit", "timeout", "trace"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
two-face = { version = "0.4.2", default-features = false, features = ["syntect-fancy"] }
url = "2"
wastebin_core = { path = "../wastebin_core/" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json"] }
tower = { version = "0.5", default-features = false, features = ["util", "make"] }
tower-service = "0.3"

[lints]
workspace = true
