[package]
name = "wastebin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
askama = { version = "0.14.0" }
askama_web = { version = "0.14.0", features = ["axum-0.8"] }
axum = { version = "0.8", features = ["json", "query", "macros"] }
axum-extra = { version = "0.12", features = ["cookie-signed", "typed-header"] }
cached = { version = "0.56.0", default-features = false }
futures = "0.3.31"
hex = "0.4"
hostname = "0.4.0"
http = "1.3"
mime = "0.3"
qrcodegen = "1"
sha2 = "0.10"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["compression-full", "limit", "timeout", "trace"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
url = "2"
wastebin_core = { path = "../wastebin_core/" }
wastebin_highlight = { path = "../wastebin_highlight/" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json"] }
tower = { version = "0.5", default-features = false, features = ["util", "make"] }

[lints]
workspace = true
